# sfml-mining-game

./: .gitignore  CMakeLists.txt  GAME_PREVIEW.md  LEARNING_GUIDE.md  README.md  test_build.sh  test_game_logic.cpp  test_simple  test_simple_logic.cpp
include/: Game.h  Inventory.h  Ore.h  Pickaxe.h  Player.h  Shop.h  UI.h  World.h
src/: Game.cpp  Inventory.cpp  Ore.cpp  Pickaxe.cpp  Player.cpp  Shop.cpp  UI.cpp  World.cpp  main.cpp
